2004-02-10  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* library/msgs/eo.msg:	Language support for Esperanto and Polish from
	* library/msgs/pl.msg:	Artur Trzewik <mail@xdobry.de> with thanks.

2004-02-09  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* generic/tkImgPhoto.c (Tk_PhotoPutBlock, Tk_PhotoPutZoomedBlock): 
	* tests/imgPhoto.test (imgPhoto-16.1): Better handling of the case
	when copying from one area of a photo to another triggers a
	resizing of the image.  [Bug 877950]

2004-02-07  David Gravereaux <davygrvy@pobox.com>

	* win/makefile.vc:
	* win/rules.vc:
	* win/rc/tk.rc:
	* win/rc/wish.rc:  Now supports the 'unchecked' option when building.

2004-02-03  Jeff Hobbs  <jeffh@ActiveState.com>

	* doc/menubutton.n: 
	* library/menu.tcl (::tk::MbPost): make menubuttons that post
	above or below reverse direction when not enough space is available.

2004-02-01  David Gravereaux <davygrvy@pobox.com>
	* win/lamp.bmp (deleted): using win/rc/lamp.bmp instead.

	* win/winMain.c: Removed our custom setargv() in favor of __argc
	and __argv exported by the C run-time.

	* win/makefile.vc:
	* win/rc/tk.rc:
	* win/rc/wish.rc: General clean-up.

	* win/rules.vc:
	* win/nmakehlp.c: sync'd to Tcl.

2004-01-31  Joe English  <jenglish@users.sourceforge.net>
	* unix/tkUnixWm.c, unix/tkUnixEvent.c:  Replaced
	TclpGetTime() with Tcl_GetTime(), to remove dependency
	on tclInt.h [Bug 874745].

2004-01-27  Daniel Steffen  <das@users.sourceforge.net>

	* generic/tkTextIndex.c: added '#include <tclInt.h>' since the 
	code uses the TclUtfToUniChar macro from that file. [Bug 874745]

	* macosx/Wish.pbproj/project.pbxproj: removed erroneous reference
	to mkpsenc.tcl in bundle resources phase (mkpsenc.tcl is already
	part of the copy files phase to Resources/Scripts).

	* macosx/Makefile: added support for 'xcodebuild' on Mac OS X 10.3.

2004-01-25  Benjamin Riefenstahl  <Benjamin.Riefenstahl@epost.de>

	* macosx/tkMacOSXKeyboard.c: Fix regressions due to the last
	patches.
